Fixed dropdown menu z-index, created edit for Challenges

--- a/mycleancity/static/css/mycleancity.css
+++ b/mycleancity/static/css/mycleancity.css
@@ -22,7 +22,7 @@ a.menu-items-left { float: left; position: relative; display: inline-block; z-in
 a.menu-items-right { float: right; margin: 20px; position: relative; display: block; z-index: 999; }
 a.menu-items:hover { text-decoration: none; color: #262261; }
 
-.dropdown { position: relative; z-index: 999; }
+.dropdown { position: relative; z-index: 1000; }
 .dropdown .caret { border-top: 4px solid white; }
 .dropdown a:hover, .dropdown a:active { text-decoration: none; background: transparent; }
 .dropdown-menu { background: url(../images/1x1-white.png) repeat 0 0; left: 437px; top: 40px; padding: 0; }
@@ -32,12 +32,15 @@ a.menu-items:hover { text-decoration: none; color: #262261; }
 .dropdown-menu li a { font-size: 15px; margin: 0; padding: 15px 20px; text-shadow: none; }
 .dropdown-menu li a:hover { background: transparent; color: #999; }
 
+.bootstrap-timepicker table td input { width: 50px; }
+.bootstrap-timepicker.dropdown-menu.open { width: 202px; }
+
 .popover.right { top: 415px !important; left: 214px !important; display: block; }
 
 #sign-go-back-big { width: 206px; height: 54px; position: absolute; z-index: 9999; top: -25px; left: 325px; background: url(../images/sign-go-back-big.png) no-repeat 0 0; }
 #sign-go-back { width: 43px; height: 54px; position: absolute; z-index: 9999; top: -8px; left: 325px; background: url(../images/sign-go-back.png) no-repeat 0 0; }
 #sign-go-back.login, #sign-go-back.all-clean-teams { left: 424px; }
-#sign-go-back.new-challenge { left: 374px; }
+#sign-go-back.new-challenge { left: 334px; }
 #sign-go-back.profile { left: 540px; }
 #sign-go-back.contact { left: 424px; }
 #sign-go-back.register { left: 373px; }
@@ -226,7 +229,7 @@ div.content.media-hub { background: transparent url(../images/media-hub-bg.png) 
 ******************************/ 
 #white-box.public-profile { width: 478px; left: 45%; }
 #white-box.public-profile img.profile-pic { display: block; }
-#white-box.public-profile span.edit-profile { position: relative; left: 40px; top: 5px; }
+#white-box.public-profile span.edit-profile-link { position: relative; left: 40px; top: 5px; }
 
 #white-box.public-profile div.info { width: 264px; float: left; }
 #white-box.public-profile div.info h2 { font-weight: 700; float: left; }
@@ -286,6 +289,7 @@ div.content.challenge-overview #white-box table tr td p { font-size: 15px; }
 div.content.challenge-overview #white-box table tr td.titles { min-width: 80px; font-weight: 700; font-size: 20px; }
 div.content.challenge-overview #white-box input[type="submit"] { width: 296px; font-size: 16px; margin: 0 auto; }
 div.content.challenge-overview #white-box a.btn { margin: 0 auto; width: 300px; }
+div.content.challenge-overview #white-box #edit-challenge-link { float: right; margin-right: 17px; }
 
 div.content.challenge-overview #participants-box { position: absolute; width: 200px; height: 300px; overflow: scroll; z-index: 1000; left: 14%; padding: 27px; background: url(../images/1x1-white.png) repeat 0 0; border: 4px solid #689042; }
 div.content.challenge-overview #participants-box h1 { font-weight: 900; }
@@ -349,7 +353,7 @@ div.content.leadership-board { background: transparent url(../images/no-trees-bg
 #white-box.clean-team-members-list p { font-size: 14px; }
 #white-box.clean-team-members-list p #badge-icon { width: 62px; }
 #white-box.clean-team-profile { width: 478px; left: 55%; }
-/*#white-box.clean-team-profile span.edit-profile { display: block; float: right; }
+/*#white-box.clean-team-profile span.edit-profile-link { display: block; float: right; }
 #white-box.clean-team-profile h2 { font-weight: 700; float: left; }
 #white-box.clean-team-profile div.field { font-size: 18px; }
 #white-box.clean-team-profile div.field p.title { font-weight: 700; float: left; margin-right: 5px; }
